qmake3 = find_program('qmake-qt3', required: false)
if qmake3.found()
tests += [['qmake/qt3']]
endif
qmake4 = find_program('qmake-qt4', required: false)
if qmake4.found()
tests += [['qmake/qt4']]
endif
qmake5 = find_program('qmake-qt5', required: false)
if qmake5.found()
tests += [['qmake/qt5']]
endif
